MFB: Fixed bug #43559 (array_merge_recursive() doesn't behave as expected with duplicate NULL values)